--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,19 @@
+buildscript {
+    repositories {
+        mavenCentral()
+
+        // NOTE: This is only needed when developing the plugin!
+        mavenLocal()
+    }
+
+    dependencies {
+        classpath 'com.android.tools.build:gradle:1.1.3'
+        classpath 'com.github.stephanenicolas.ormgap:ormgap-plugin:1.0.7'
+    }
+}
+
 apply plugin: 'com.android.application'
+apply plugin: 'ormgap'
 
 android {
     compileSdkVersion 24
@@ -6,10 +21,11 @@ android {
 
     defaultConfig {
         applicationId "com.example.berkcirisci.alphafitness"
-        minSdkVersion 14
+        minSdkVersion 18
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -26,6 +42,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.1.1'
     compile 'com.google.android.gms:play-services:9.2.1'
+    compile 'com.android.support:support-v4:24.1.1'
 }
 
 
